Phase 3 new mode debug